--- a/assets/styles.css
+++ b/assets/styles.css
@@ -429,7 +429,7 @@ header nav .account-btns a button{
 
     /* CONTACTO */
     #contacto {
-        height: 68vh ;
+        height: 40rem ;
     }
     #contacto .contact-title {
         font-size: 4rem;
