--- a/assets/styles.css
+++ b/assets/styles.css
@@ -159,7 +159,132 @@ header nav .account-btns a button{
 }
 
 
+/* PROFILE */
+header nav #nav-logo-user{
+    position: absolute;
+    right: 40px;
+    top: 12px;
+}
 
+.main-container h3#title-info{
+    position: absolute;
+    width: 352px;
+    height: 52px;
+    top:115px;
+    left:95px;
+    font-size: 25px;
+    line-height: 58px;
+}
+.main-container img#logo-user{
+    position: absolute;
+    left: 95px;
+    top:168px
+}
+.main-container p#text-upload{
+    position: absolute;
+    left: 100px;
+    top:350px;
+    font-size:18px;
+    font-weight: 400px;
+}
+.main-container img#subir-imagen{
+    position: absolute;
+    left:200px;
+    top: 340px;
+}
+.container-dates{
+    position: relative;
+    width: 800px;
+    height: 200px;
+    left: 400px;
+    top: 100px;
+    background-color:#f891c5;
+    border-radius: 15px;
+}
+.container-dates h2#datos-generales{
+    position: absolute;
+    width: 382px;
+    height: 58px;
+    left: 20px;
+    color: black;
+    margin: 10px;
+}
+.container-dates p#dato1{
+    position: absolute;
+    font-size: 18px;
+    color: black;
+    left: 30px ;
+    top: 50px;
+}
+
+.container-dates p#dato2{
+    position: absolute;
+    font-size: 18px;
+    color: black;
+    left: 30px;
+    top: 80px;
+}
+
+.container-dates p#dato3{
+    position: absolute;
+    font-size: 18px;
+    color: black;
+    left: 30px;
+    top: 110px;
+}
+
+.container-edit-date{
+    position: relative;
+    width: 800px;
+    height: 240px;
+    left: 400px;
+    top:180px;
+    background-color:#f891c5;
+    border-radius: 15px;
+}
+
+.container-edit-date h2#edit-info{
+    position: absolute;
+    width: 382px;
+    height: 58px;
+    left: 20px;
+    color: black;
+    margin: 10px;
+}
+
+.dates-f{
+    padding: 5px;
+    color: black
+}
+
+.dates-f label{
+    position: relative;
+    display: block;
+    width: 150px;
+    text-align: left;
+    margin-right: 15px;
+    font-size: 18px;
+    top:45px;
+    left: 25px;
+}
+    
+.dates-f input{
+    position: relative;
+    display: block;
+    width: 200px;
+    height:25px;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    top:45px;
+    left: 25px;
+}
+.form-btn{
+    position:relative;
+    top: 70px;
+    margin: 5px;
+}
 
 
 /* CRUD */
