--- a/assets/styles.css
+++ b/assets/styles.css
@@ -166,6 +166,11 @@ header nav #nav-logo-user{
     top: 12px;
 }
 
+.main-container{
+    width: 100%;
+    height: 900px;
+}
+
 .main-container h3#title-info{
     position: absolute;
     width: 352px;
@@ -193,63 +198,51 @@ header nav #nav-logo-user{
     top: 340px;
 }
 .container-dates{
-    position: relative;
+    display:flex;
+    margin: 80px 390px;
     width: 800px;
     height: 200px;
-    left: 400px;
-    top: 100px;
     background-color:#f891c5;
     border-radius: 15px;
 }
 .container-dates h2#datos-generales{
-    position: absolute;
     width: 382px;
     height: 58px;
-    left: 20px;
     color: black;
-    margin: 10px;
+    margin: 30px 20px;
 }
 .container-dates p#dato1{
-    position: absolute;
     font-size: 18px;
-    color: black;
-    left: 30px ;
-    top: 50px;
+    color: black; 
+    margin: 70px -400px;
 }
 
 .container-dates p#dato2{
-    position: absolute;
     font-size: 18px;
     color: black;
-    left: 30px;
-    top: 80px;
+    margin: 100px 220px;
 }
 
 .container-dates p#dato3{
-    position: absolute;
     font-size: 18px;
     color: black;
-    left: 30px;
-    top: 110px;
+    margin: 130px -315px;
 }
 
 .container-edit-date{
-    position: relative;
+    display:flex;
+    margin: 80px 390px;
     width: 800px;
-    height: 240px;
-    left: 400px;
-    top:180px;
+    height: 260px;
     background-color:#f891c5;
     border-radius: 15px;
 }
 
 .container-edit-date h2#edit-info{
-    position: absolute;
     width: 382px;
     height: 58px;
-    left: 20px;
     color: black;
-    margin: 10px;
+    margin: 30px 20px;
 }
 
 .dates-f{
@@ -264,8 +257,8 @@ header nav #nav-logo-user{
     text-align: left;
     margin-right: 15px;
     font-size: 18px;
-    top:45px;
-    left: 25px;
+    top:60px;
+    left: -245px;
 }
     
 .dates-f input{
@@ -277,13 +270,16 @@ header nav #nav-logo-user{
     border: 1px solid #ccc;
     border-radius: 10px;
     box-sizing: border-box;
-    top:45px;
-    left: 25px;
+    top:65px;
+    left: -245px;
 }
 .form-btn{
     position:relative;
-    top: 70px;
+    width: 250px;
+    height: 40px;
+    top: 270px;
     margin: 5px;
+    left: -475px;
 }
 
 
