--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -261,16 +261,17 @@ header nav #nav-logo-user {
 .crud {
     position: relative;
     width: 80%;
-    height: 500px;
+    height: 800px;
     left: 10%;
     top: 10px;
 }
-.crud h1 {
+.crud h1#Consulta {
     position: absolute;
-    top: 30px;
+    top: 360px;
     left: 50px;
     font-size: 37px;
 }
+/*
 .crud a {
     text-decoration: none;
     position: absolute;
@@ -287,6 +288,7 @@ header nav #nav-logo-user {
     font-size: 15px;
     top: 37px;
 }
+*/
 
 .contenido {
     border-collapse: collapse;
@@ -294,7 +296,7 @@ header nav #nav-logo-user {
     font-size: 17px;
     min-width: 400px;
     position: absolute;
-    top: 80px;
+    top: 400px;
     left: 10%;
 }
 
