--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -205,27 +205,36 @@ header nav #nav-logo-user {
     margin-top: 4px;
 }
 .container-edit-date {
-    display: flex;
-    margin: 80px 390px;
+    margin: auto;
     width: 800px;
-    height: 260px;
     background-color: #f891c5;
     border-radius: 15px;
 }
 
 .container-edit-date h2#edit-info {
-    width: 382px;
-    height: 58px;
-    color: black;
-    margin: 30px 20px;
+    text-align: center;
 }
 
 .dates-f {
-    padding: 5px;
-    color: black;
+    margin: auto;
+    width: 50%;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+.dates-f label,
+.dates-f input {
+    margin-top: 20px;
+}
+.dates-f input {
+    padding: 3px;
 }
 
-.dates-f label {
+.dates-f button {
+    margin-top: 1.5rem;
+}
+
+/* .dates-f label {
     position: relative;
     display: block;
     width: 150px;
@@ -247,15 +256,15 @@ header nav #nav-logo-user {
     box-sizing: border-box;
     top: 65px;
     left: -245px;
-}
-.form-btn {
+} */
+/* .form-btn {
     position: relative;
     width: 250px;
     height: 40px;
     top: 270px;
     margin: 5px;
     left: -475px;
-}
+} */
 
 /* CRUD */
 .crud {
